@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -76,15 +75,18 @@ public class TusService {
 	private void saveModelRepo(HttpServletRequest request, UploadInfo uploadInfo, String filename) throws
 		IOException,
 		TusException {
+		// model repo DTO 생성
 		ModelRepoDTO.RequestDTO modelRepoDTO = getModelRepoDTO(uploadInfo);
+		// model repo DB 등록
 		ModelRepoDTO.ResponseDTO modelRepo = modelRepoFacadeService.createModelRepo(modelRepoDTO);
-		// 파일 저장
-		Long fileSize = getFilePath(request, uploadInfo, filename);
 
 		ModelRepoEntity modelRepoEntity = modelRepoRepository.findById(modelRepo.getModelRepoId())
 			.orElseThrow(() -> new RestApiException(DatasetErrorCode.DATASET_NOT_FOUND));
-
-		modelRepoEntity.setModelPath(uploadInfo.getMetadata().get("filePath"));
+		//파일 업로드 경로
+		String filePath = modelRepoEntity.getModelPath() + "/v" + modelRepoEntity.getModelVersionList().size() + 1;
+		// 파일 저장
+		Long fileSize = getFilePath(request, filePath, filename);
+		// 해당 파일 size
 		modelRepoEntity.setModelSize(fileSize);
 	}
 
@@ -98,9 +100,13 @@ public class TusService {
 			.orElseThrow(() -> new RestApiException(TusErrorCode.FILE_NAME_ERROR_MESSAGE));
 		String workspaceResourceName = Optional.ofNullable(uploadInfo.getMetadata().get("workspaceResourceName"))
 			.orElseThrow(() -> new RestApiException(TusErrorCode.FILE_NAME_ERROR_MESSAGE));
-		List<Long> labelsIds = getStorageIds(
+		List<Long> labelsIds = getLabels(
 			Optional.ofNullable(uploadInfo.getMetadata().get("labelsIds"))
 				.orElseThrow(() -> new RestApiException(TusErrorCode.FILE_NAME_ERROR_MESSAGE)));
+		String modelFileName = Optional.ofNullable(uploadInfo.getMetadata().get("modelFileName"))
+			.orElseThrow(() -> new RestApiException(TusErrorCode.FILE_NAME_ERROR_MESSAGE));
+		String labelFileName = Optional.ofNullable(uploadInfo.getMetadata().get("labelFileName"))
+			.orElseThrow(() -> new RestApiException(TusErrorCode.FILE_NAME_ERROR_MESSAGE));
 
 		return ModelRepoDTO.RequestDTO.builder()
 			.modelName(modelName)
@@ -108,6 +114,8 @@ public class TusService {
 			.workspaceResourceName(workspaceResourceName)
 			.labelIds(labelsIds)
 			.storageId(storageId)
+			.modelFileName(modelFileName)
+			.labelFileName(labelFileName)
 			.build();
 	}
 
@@ -120,7 +128,7 @@ public class TusService {
 			.orElseThrow(() -> new RestApiException(ModelErrorCode.MODEL_NOT_FOUND));
 
 		// 파일 저장
-		Long fileSize = getFilePath(request, uploadInfo, filename);
+		Long fileSize = getFilePath(request, uploadInfo.getMetadata().get("filePath"), filename);
 		findModel.setModelSize(fileSize);
 	}
 
@@ -133,21 +141,21 @@ public class TusService {
 			.orElseThrow(() -> new RestApiException(DatasetErrorCode.DATASET_NOT_FOUND));
 
 		// 파일 저장
-		Long fileSize = getFilePath(request, uploadInfo, filename);
+		Long fileSize = getFilePath(request, uploadInfo.getMetadata().get("filePath"), filename);
 		findDataset.setDatasetSize(fileSize);
 	}
 
-	private Long getFilePath(HttpServletRequest request, UploadInfo uploadInfo, String filename) throws
+	private Long getFilePath(HttpServletRequest request, String filePath, String filename) throws
 		IOException,
 		TusException {
-		return CoreFileUtils.saveInputStreamToFile(uploadInfo.getMetadata().get("filePath"),
+		return CoreFileUtils.saveInputStreamToFile(filePath,
 			filename, tusFileUploadService.getUploadedBytes(request.getRequestURI()));
 	}
 
-	private List<Long> getStorageIds(String storageIds){
-		return Arrays.stream(storageIds.split(","))
+	private List<Long> getLabels(String labelIds){
+		return Arrays.stream(labelIds.split(","))
 			.map(String::trim)
 			.map(Long::parseLong)
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
